# lesson9-geopandas-yuto-kajiki

./: .replit  Exercise_9_problem_1.md  Exercise_9_problem_1.py  Exercise_9_problem_2.md  Exercise_9_problem_2.py  Exercise_9_problem_3.md  Exercise_9_problem_3.py  Kruger_posts.shp  README.md  polygon.dbf  pyproject.toml  some_movements.dbf  some_movements.shp  some_movements.shx  test_1.py
