[tool.poetry]
name = "repl_python3_lesson9-geopandas-yuto-kajiki"
version = "0.1.0"
description = ""
authors = ["yutokajiki <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
pandas = "^1.2.4"
pyproj = "^3.1.0"
shapely = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
